syntax = "proto3";

package cloud.disk_manager;

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/api;disk_manager";

enum PlacementStrategy {
    PLACEMENT_STRATEGY_UNSPECIFIED = 0;
    PLACEMENT_STRATEGY_SPREAD = 1;
    PLACEMENT_STRATEGY_PARTITION = 2;
}

message GroupId {
    string zone_id = 1;
    string group_id = 2;
}

message PlacementGroup {
    reserved 5;

    GroupId group_id = 1;
    PlacementStrategy placement_strategy = 2;
    repeated string disk_ids = 3;
    repeated string racks = 4;
    uint32 placement_partition_count = 6;
}
